@@ -36,6 +36,7 @@ OTHER CONTRIBUTORS
 	Greg Ercolano
 	Yuri Fedorchenko
 	George Garvey
+	Mikael Hultgren
 	Stuart Levy
 	Mike Lindner
 	Alexander Mai
