@@ -21,6 +21,7 @@ description of the <TT>fl_</TT> functions, see
 <A HREF="Fl_Browser.html">Fl_Browser</A><BR>
 <A HREF="Fl_Button.html">Fl_Button</A><BR>
 <A HREF="Fl_Chart.html">Fl_Chart</A><BR>
+<A HREF="Fl_Check_Browser.html">Fl_Check_Browser</A><BR>
 <A HREF="Fl_Check_Button.html">Fl_Check_Button</A><BR>
 <A HREF="Fl_Choice.html">Fl_Choice</A><BR>
 <A HREF="Fl_Clock.html">Fl_Clock</A><BR>
@@ -141,6 +142,7 @@ description of the <TT>fl_</TT> functions, see
 		<LI><A HREF="Fl_Multi_Browser.html#Fl_Multi_Browser">Fl_Multi_Browser</A>
 		<LI><A HREF="Fl_Select_Browser.html#Fl_Select_Browser">Fl_Select_Browser</A>
 	    </UL>
+	    <LI><A HREF="Fl_Check_Browser.html">Fl_Check_Browser</A>
 	</UL>
 	<LI><A HREF="Fl_Button.html#Fl_Button">Fl_Button</A>
 	<UL>
